# mpc_controller

./: CMakeLists.txt  README.md  mpc_controller_plugin.xml  package.xml
include/mpc_controller/: mpc_controller.h
src/: mpc_controller.cpp
